fixed some players

--- a/config.py.example
+++ b/config.py.example
@@ -16,5 +16,6 @@ STATIC_FILES = [
     '/js/bootstrap.bundle.min.js.map',
     '/js/masonry.pkgd.min.js',
     '/js/jquery-3.6.0.min.js',
-    '/js/main.js'
+    '/js/main.js',
+    '/js/dash.all.min.js'
 ]
