--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-aiofiles==23.1.0
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-demoji==1.1.0
-h11==0.14.0
-idna==3.4
-requests==2.31.0
-urllib3==2.0.2
-uvicorn==0.22.0
+aiofiles>=23.1.0
+demoji>=1.1.0
+uvicorn>=0.22.0
+requests>=0.24.1
+json-stream>=2.3.0
